gen/org/tuwien/ASP_Core2_ModulesParser.java
// Generated from /home/as/src/ASP-Core2-Parser/ASP_Core2_Modules.g4 by ANTLR 4.5.1
package org.tuwien;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ASP_Core2_ModulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ANONYMOUS_VARIABLE=1, DOT=2, COMMA=3, QUESTION_MARK=4, COLON=5, SEMICOLON=6, 
		OR=7, NAF=8, CONS=9, WCONS=10, PLUS=11, MINUS=12, TIMES=13, DIV=14, AT=15, 
		SHARP=16, PAREN_OPEN=17, PAREN_CLOSE=18, SQUARE_OPEN=19, SQUARE_CLOSE=20, 
		CURLY_OPEN=21, CURLY_CLOSE=22, EQUAL=23, UNEQUAL=24, LESS=25, GREATER=26, 
		LESS_OR_EQ=27, GREATER_OR_EQ=28, AGGREGATE_COUNT=29, AGGREGATE_MAX=30, 
		AGGREGATE_MIN=31, AGGREGATE_SUM=32, ID=33, VARIABLE=34, NUMBER=35, STRING=36, 
		COMMENT=37, MULTI_LINE_COMMEN=38, BLANK=39;
	public static final int
		RULE_program = 0, RULE_statements = 1, RULE_query = 2, RULE_statement = 3, 
		RULE_head = 4, RULE_module_def = 5, RULE_module_use = 6, RULE_module_local_definition = 7, 
		RULE_module_rule_scope = 8, RULE_body = 9, RULE_disjunction = 10, RULE_choice = 11, 
		RULE_choice_elements = 12, RULE_choice_element = 13, RULE_aggregate = 14, 
		RULE_aggregate_elements = 15, RULE_aggregate_element = 16, RULE_aggregate_function = 17, 
		RULE_weight_at_level = 18, RULE_naf_literals = 19, RULE_naf_literal = 20, 
		RULE_classical_literal = 21, RULE_module_variables = 22, RULE_module_predicate = 23, 
		RULE_module_predicate_variable = 24, RULE_module_predicate_variables = 25, 
		RULE_module_predicate_uses = 26, RULE_builtin_atom = 27, RULE_binop = 28, 
		RULE_terms = 29, RULE_term = 30, RULE_gringo_range = 31, RULE_gringo_sharp = 32, 
		RULE_basic_terms = 33, RULE_basic_term = 34, RULE_ground_term = 35, RULE_variable_term = 36, 
		RULE_arithop = 37;
	public static final String[] ruleNames = {
		"program", "statements", "query", "statement", "head", "module_def", "module_use", 
		"module_local_definition", "module_rule_scope", "body", "disjunction", 
		"choice", "choice_elements", "choice_element", "aggregate", "aggregate_elements", 
		"aggregate_element", "aggregate_function", "weight_at_level", "naf_literals", 
		"naf_literal", "classical_literal", "module_variables", "module_predicate", 
		"module_predicate_variable", "module_predicate_variables", "module_predicate_uses", 
		"builtin_atom", "binop", "terms", "term", "gringo_range", "gringo_sharp", 
		"basic_terms", "basic_term", "ground_term", "variable_term", "arithop"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'_'", "'.'", "','", "'?'", "':'", "';'", "'|'", "'not'", "':-'", 
		"':~'", "'+'", "'-'", "'*'", "'/'", "'@'", "'#'", "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "'='", null, "'<'", "'>'", "'<='", "'>='", "'#count'", 
		"'#max'", "'#min'", "'#sum'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ANONYMOUS_VARIABLE", "DOT", "COMMA", "QUESTION_MARK", "COLON", 
		"SEMICOLON", "OR", "NAF", "CONS", "WCONS", "PLUS", "MINUS", "TIMES", "DIV", 
		"AT", "SHARP", "PAREN_OPEN", "PAREN_CLOSE", "SQUARE_OPEN", "SQUARE_CLOSE", 
		"CURLY_OPEN", "CURLY_CLOSE", "EQUAL", "UNEQUAL", "LESS", "GREATER", "LESS_OR_EQ", 
		"GREATER_OR_EQ", "AGGREGATE_COUNT", "AGGREGATE_MAX", "AGGREGATE_MIN", 
		"AGGREGATE_SUM", "ID", "VARIABLE", "NUMBER", "STRING", "COMMENT", "MULTI_LINE_COMMEN", 
		"BLANK"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ASP_Core2_Modules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ASP_Core2_ModulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(76);
				statements();
				}
				break;
			}
			setState(80);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << ID) | (1L << VARIABLE))) != 0)) {
				{
				setState(79);
				query();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			statement();
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(83);
				statements();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public Classical_literalContext classical_literal() {
			return getRuleContext(Classical_literalContext.class,0);
		}
		public TerminalNode QUESTION_MARK() { return getToken(ASP_Core2_ModulesParser.QUESTION_MARK, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			classical_literal();
			setState(87);
			match(QUESTION_MARK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode CONS() { return getToken(ASP_Core2_ModulesParser.CONS, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode DOT() { return getToken(ASP_Core2_ModulesParser.DOT, 0); }
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public TerminalNode WCONS() { return getToken(ASP_Core2_ModulesParser.WCONS, 0); }
		public TerminalNode SQUARE_OPEN() { return getToken(ASP_Core2_ModulesParser.SQUARE_OPEN, 0); }
		public Weight_at_levelContext weight_at_level() {
			return getRuleContext(Weight_at_levelContext.class,0);
		}
		public TerminalNode SQUARE_CLOSE() { return getToken(ASP_Core2_ModulesParser.SQUARE_CLOSE, 0); }
		public Gringo_sharpContext gringo_sharp() {
			return getRuleContext(Gringo_sharpContext.class,0);
		}
		public Module_defContext module_def() {
			return getRuleContext(Module_defContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		int _la;
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(CONS);
				setState(90);
				body();
				setState(91);
				match(DOT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				head();
				setState(98);
				_la = _input.LA(1);
				if (_la==CONS) {
					{
					setState(94);
					match(CONS);
					setState(96);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANONYMOUS_VARIABLE) | (1L << NAF) | (1L << MINUS) | (1L << PAREN_OPEN) | (1L << CURLY_OPEN) | (1L << AGGREGATE_COUNT) | (1L << AGGREGATE_MAX) | (1L << AGGREGATE_MIN) | (1L << AGGREGATE_SUM) | (1L << ID) | (1L << VARIABLE) | (1L << NUMBER) | (1L << STRING))) != 0)) {
						{
						setState(95);
						body();
						}
					}

					}
				}

				setState(100);
				match(DOT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(WCONS);
				setState(104);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANONYMOUS_VARIABLE) | (1L << NAF) | (1L << MINUS) | (1L << PAREN_OPEN) | (1L << CURLY_OPEN) | (1L << AGGREGATE_COUNT) | (1L << AGGREGATE_MAX) | (1L << AGGREGATE_MIN) | (1L << AGGREGATE_SUM) | (1L << ID) | (1L << VARIABLE) | (1L << NUMBER) | (1L << STRING))) != 0)) {
					{
					setState(103);
					body();
					}
				}

				setState(106);
				match(DOT);
				setState(107);
				match(SQUARE_OPEN);
				setState(108);
				weight_at_level();
				setState(109);
				match(SQUARE_CLOSE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(111);
				gringo_sharp();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				module_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadContext extends ParserRuleContext {
		public DisjunctionContext disjunction() {
			return getRuleContext(DisjunctionContext.class,0);
		}
		public ChoiceContext choice() {
			return getRuleContext(ChoiceContext.class,0);
		}
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_head);
		try {
			setState(117);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				disjunction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				choice();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ASP_Core2_ModulesParser.ID, 0); }
		public Module_rule_scopeContext module_rule_scope() {
			return getRuleContext(Module_rule_scopeContext.class,0);
		}
		public TerminalNode DOT() { return getToken(ASP_Core2_ModulesParser.DOT, 0); }
		public TerminalNode SQUARE_OPEN() { return getToken(ASP_Core2_ModulesParser.SQUARE_OPEN, 0); }
		public TerminalNode SQUARE_CLOSE() { return getToken(ASP_Core2_ModulesParser.SQUARE_CLOSE, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(ASP_Core2_ModulesParser.PAREN_OPEN, 0); }
		public TerminalNode PAREN_CLOSE() { return getToken(ASP_Core2_ModulesParser.PAREN_CLOSE, 0); }
		public Module_predicate_variablesContext module_predicate_variables() {
			return getRuleContext(Module_predicate_variablesContext.class,0);
		}
		public Module_variablesContext module_variables() {
			return getRuleContext(Module_variablesContext.class,0);
		}
		public Module_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterModule_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitModule_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitModule_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_defContext module_def() throws RecognitionException {
		Module_defContext _localctx = new Module_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_module_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(125);
			_la = _input.LA(1);
			if (_la==SQUARE_OPEN) {
				{
				setState(120);
				match(SQUARE_OPEN);
				setState(122);
				_la = _input.LA(1);
				if (_la==VARIABLE) {
					{
					setState(121);
					module_predicate_variables();
					}
				}

				setState(124);
				match(SQUARE_CLOSE);
				}
			}

			setState(132);
			_la = _input.LA(1);
			if (_la==PAREN_OPEN) {
				{
				setState(127);
				match(PAREN_OPEN);
				setState(129);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANONYMOUS_VARIABLE) | (1L << MINUS) | (1L << PAREN_OPEN) | (1L << ID) | (1L << VARIABLE) | (1L << NUMBER) | (1L << STRING))) != 0)) {
					{
					setState(128);
					module_variables();
					}
				}

				setState(131);
				match(PAREN_CLOSE);
				}
			}

			setState(134);
			module_rule_scope();
			setState(135);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_useContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(ASP_Core2_ModulesParser.COLON, 0); }
		public Classical_literalContext classical_literal() {
			return getRuleContext(Classical_literalContext.class,0);
		}
		public Module_local_definitionContext module_local_definition() {
			return getRuleContext(Module_local_definitionContext.class,0);
		}
		public TerminalNode ID() { return getToken(ASP_Core2_ModulesParser.ID, 0); }
		public TerminalNode SQUARE_OPEN() { return getToken(ASP_Core2_ModulesParser.SQUARE_OPEN, 0); }
		public TerminalNode SQUARE_CLOSE() { return getToken(ASP_Core2_ModulesParser.SQUARE_CLOSE, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(ASP_Core2_ModulesParser.PAREN_OPEN, 0); }
		public TerminalNode PAREN_CLOSE() { return getToken(ASP_Core2_ModulesParser.PAREN_CLOSE, 0); }
		public Module_predicate_usesContext module_predicate_uses() {
			return getRuleContext(Module_predicate_usesContext.class,0);
		}
		public Module_variablesContext module_variables() {
			return getRuleContext(Module_variablesContext.class,0);
		}
		public Module_useContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_use; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterModule_use(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitModule_use(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitModule_use(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_useContext module_use() throws RecognitionException {
		Module_useContext _localctx = new Module_useContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_module_use);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			switch (_input.LA(1)) {
			case CURLY_OPEN:
				{
				setState(137);
				module_local_definition();
				}
				break;
			case ID:
				{
				setState(138);
				match(ID);
				setState(144);
				_la = _input.LA(1);
				if (_la==SQUARE_OPEN) {
					{
					setState(139);
					match(SQUARE_OPEN);
					setState(141);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(140);
						module_predicate_uses();
						}
					}

					setState(143);
					match(SQUARE_CLOSE);
					}
				}

				setState(151);
				_la = _input.LA(1);
				if (_la==PAREN_OPEN) {
					{
					setState(146);
					match(PAREN_OPEN);
					setState(148);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANONYMOUS_VARIABLE) | (1L << MINUS) | (1L << PAREN_OPEN) | (1L << ID) | (1L << VARIABLE) | (1L << NUMBER) | (1L << STRING))) != 0)) {
						{
						setState(147);
						module_variables();
						}
					}

					setState(150);
					match(PAREN_CLOSE);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(155);
			match(COLON);
			setState(156);
			classical_literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_local_definitionContext extends ParserRuleContext {
		public TerminalNode CURLY_OPEN() { return getToken(ASP_Core2_ModulesParser.CURLY_OPEN, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode CURLY_CLOSE() { return getToken(ASP_Core2_ModulesParser.CURLY_CLOSE, 0); }
		public Module_local_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_local_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterModule_local_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitModule_local_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitModule_local_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_local_definitionContext module_local_definition() throws RecognitionException {
		Module_local_definitionContext _localctx = new Module_local_definitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_module_local_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(CURLY_OPEN);
			setState(159);
			statements();
			setState(160);
			match(CURLY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_rule_scopeContext extends ParserRuleContext {
		public TerminalNode CURLY_OPEN() { return getToken(ASP_Core2_ModulesParser.CURLY_OPEN, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode CURLY_CLOSE() { return getToken(ASP_Core2_ModulesParser.CURLY_CLOSE, 0); }
		public Module_rule_scopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_rule_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).enterModule_rule_scope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASP_Core2_ModulesListener ) ((ASP_Core2_ModulesListener)listener).exitModule_rule_scope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASP_Core2_ModulesVisitor ) return ((ASP_Core2_ModulesVisitor<? extends T>)visitor).visitModule_rule_scope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_rule_scopeContext module_rule_scope() throws RecognitionException {
		Module_rule_scopeContext _localctx = new Module_rule_scopeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_module_rule_scope);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(CURLY_OPEN);
			setState(163);
			statements();
			setState(164);
			match(CURLY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
